Fix contact admin button overflow

--- a/client/src/app/+about/about-instance/about-instance.component.scss
+++ b/client/src/app/+about/about-instance/about-instance.component.scss
@@ -14,6 +14,8 @@
   & > .contact-admin {
     @include peertube-button;
     @include orange-button;
+
+    height: fit-content;
   }
 }
 
